Created dependencies folder with useful jars